--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
     "firebase": "^11.4.0",
+    "geolib": "^3.3.4",
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
